--- a/css/layout.css
+++ b/css/layout.css
@@ -14,7 +14,7 @@ body.is-ready {
     font-family: Open Sans, sans-serif;
 }
 
-h1, h2, h3, span, p{
+h1, h2, h3, span, p, button{
     color: #656058;
     font-family: Open Sans, sans-serif;
 }
@@ -27,5 +27,4 @@ button {
     cursor: pointer;
     border: none;
     background-color: transparent;
-    padding: 0;
 }
